--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -1086,24 +1086,40 @@ select:hover {
   position: absolute;
   top: 0;
   left: 0;
-  justify-content: left;
-  align-content: flex-start;
-  text-align: center;
+  display: flex;
+  margin: 2rem;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  justify-content: end;
+}
+
+#ID_Tally_IMG_P1{
+  
 }
 
 #ID_Win_Div_Two {
   position: absolute;
   top: 0.5rem;
   right: 0;
-  justify-content: right;
-  align-content: flex-end;
-  text-align: center;
+  display: flex;
+  margin: 2rem;
+  align-items: center;
+  flex-direction: column;
+  justify-content: end;
+  
+
 }
 
 #ID_Draw_Div {
   position: absolute;
+  margin-top: 2rem;
   top: 0.5rem;
   right: 45%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start; 
 }
 
 *[data-wincounter = "yes"] {
