--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -1096,39 +1096,39 @@ body[data-gameend = 'yes']{
   top: 0;
   left: 0;
   display: flex;
-  margin: 2rem;
+  margin: 2em;
   flex-wrap: wrap;
   align-items: center;
   flex-direction: column;
   justify-content: end;
+  font-size: large;
 }
 
-#ID_Tally_IMG_P1{
-  
-}
 
 #ID_Win_Div_Two {
   position: absolute;
-  top: 0.5rem;
+  top: 0;
   right: 0;
   display: flex;
-  margin: 2rem;
+  margin: 2em;
   align-items: center;
   flex-direction: column;
   justify-content: end;
+  font-size: large;
   
-
 }
 
 #ID_Draw_Div {
   position: absolute;
-  margin-top: 2rem;
-  top: 0.5rem;
-  right: 45%;
+  margin-top: 2em;
+  top: 0;
+  right: 50%;
+  transform: translateX(+50%);
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: flex-start; 
+  font-size: large;
 }
 
 *[data-wincounter = "yes"] {
